--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ div3 {text-align: right;}
 </head>
 <body>
 <title>hyperapps</title>
-<link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="Mystyle.css">
 <html>
 
 <head>
