--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@ body{
   font-weight: 100;
 
 }
+  <h1>
+   <button onclick="window.location.href = 'https://bidvvwwga8iprypakiafsg.on.drv.tw/hi%20amw/ha/';"> try the experimantal website </button>
+  </h1>
 
 h1{
 
